sdk/datafactory/arm-datafactory/samples/v10/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                                             | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ----------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [activityRunsQueryByPipelineRunSample.ts][activityrunsquerybypipelinerunsample]                                                           | Query activity runs based on input filter conditions. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ActivityRuns_QueryByPipelineRun.json                                                                                                                                                                                                                                                                                                                                 |
| [dataFlowDebugSessionAddDataFlowSample.ts][dataflowdebugsessionadddataflowsample]                                                         | Add a data flow into debug session. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_AddDataFlow.json                                                                                                                                                                                                                                                                                                                                                  |
| [dataFlowDebugSessionCreateSample.ts][dataflowdebugsessioncreatesample]                                                                   | Creates a data flow debug session. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_Create.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionDeleteSample.ts][dataflowdebugsessiondeletesample]                                                                   | Deletes a data flow debug session. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionExecuteCommandSample.ts][dataflowdebugsessionexecutecommandsample]                                                   | Execute a data flow debug command. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_ExecuteCommand.json                                                                                                                                                                                                                                                                                                                                                |
| [dataFlowDebugSessionQueryByFactorySample.ts][dataflowdebugsessionquerybyfactorysample]                                                   | Query all active data flow debug sessions. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowsCreateOrUpdateSample.ts][dataflowscreateorupdatesample]                                                                         | Creates or updates a data flow. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_Create.json                                                                                                                                                                                                                                                                                                                                                                      |
| [dataFlowsDeleteSample.ts][dataflowsdeletesample]                                                                                         | Deletes a data flow. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_Delete.json                                                                                                                                                                                                                                                                                                                                                                                 |
| [dataFlowsGetSample.ts][dataflowsgetsample]                                                                                               | Gets a data flow. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [dataFlowsListByFactorySample.ts][dataflowslistbyfactorysample]                                                                           | Lists data flows. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                             |
| [datasetsCreateOrUpdateSample.ts][datasetscreateorupdatesample]                                                                           | Creates or updates a dataset. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [datasetsDeleteSample.ts][datasetsdeletesample]                                                                                           | Deletes a dataset. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [datasetsGetSample.ts][datasetsgetsample]                                                                                                 | Gets a dataset. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [datasetsListByFactorySample.ts][datasetslistbyfactorysample]                                                                             | Lists datasets. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [exposureControlGetFeatureValueByFactorySample.ts][exposurecontrolgetfeaturevaluebyfactorysample]                                         | Get exposure control feature for specific factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ExposureControl_GetFeatureValueByFactory.json                                                                                                                                                                                                                                                                                                                           |
| [exposureControlGetFeatureValueSample.ts][exposurecontrolgetfeaturevaluesample]                                                           | Get exposure control feature for specific location. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ExposureControl_GetFeatureValue.json                                                                                                                                                                                                                                                                                                                                   |
| [exposureControlQueryFeatureValuesByFactorySample.ts][exposurecontrolqueryfeaturevaluesbyfactorysample]                                   | Get list of exposure control features for specific factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ExposureControl_QueryFeatureValuesByFactory.json                                                                                                                                                                                                                                                                                                               |
| [factoriesConfigureFactoryRepoSample.ts][factoriesconfigurefactoryreposample]                                                             | Updates a factory's repo information. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_ConfigureFactoryRepo.json                                                                                                                                                                                                                                                                                                                                                  |
| [factoriesCreateOrUpdateSample.ts][factoriescreateorupdatesample]                                                                         | Creates or updates a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                |
| [factoriesDeleteSample.ts][factoriesdeletesample]                                                                                         | Deletes a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_Delete.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetDataPlaneAccessSample.ts][factoriesgetdataplaneaccesssample]                                                                 | Get Data Plane access. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_GetDataPlaneAccess.json                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetGitHubAccessTokenSample.ts][factoriesgetgithubaccesstokensample]                                                             | Get GitHub Access Token. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_GetGitHubAccessToken.json                                                                                                                                                                                                                                                                                                                                                               |
| [factoriesGetSample.ts][factoriesgetsample]                                                                                               | Gets a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_Get.json                                                                                                                                                                                                                                                                                                                                                                                         |
| [factoriesListByResourceGroupSample.ts][factorieslistbyresourcegroupsample]                                                               | Lists factories. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_ListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                        |
| [factoriesListSample.ts][factorieslistsample]                                                                                             | Lists factories under the specified subscription. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_List.json                                                                                                                                                                                                                                                                                                                                                      |
| [factoriesUpdateSample.ts][factoriesupdatesample]                                                                                         | Updates a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_Update.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [globalParametersCreateOrUpdateSample.ts][globalparameterscreateorupdatesample]                                                           | Creates or updates a Global parameter x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_Create.json                                                                                                                                                                                                                                                                                                                                                         |
| [globalParametersDeleteSample.ts][globalparametersdeletesample]                                                                           | Deletes a Global parameter x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_Delete.json                                                                                                                                                                                                                                                                                                                                                                    |
| [globalParametersGetSample.ts][globalparametersgetsample]                                                                                 | Gets a Global parameter x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_Get.json                                                                                                                                                                                                                                                                                                                                                                          |
| [globalParametersListByFactorySample.ts][globalparameterslistbyfactorysample]                                                             | Lists Global parameters x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                |
| [integrationRuntimeNodesDeleteSample.ts][integrationruntimenodesdeletesample]                                                             | Deletes a self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_Delete.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeNodesGetIPAddressSample.ts][integrationruntimenodesgetipaddresssample]                                                 | Get the IP address of self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_GetIpAddress.json                                                                                                                                                                                                                                                                                                                      |
| [integrationRuntimeNodesGetSample.ts][integrationruntimenodesgetsample]                                                                   | Gets a self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [integrationRuntimeNodesUpdateSample.ts][integrationruntimenodesupdatesample]                                                             | Updates a self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_Update.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeObjectMetadataGetSample.ts][integrationruntimeobjectmetadatagetsample]                                                 | Get a SSIS integration runtime object metadata by specified path. The return is pageable metadata list. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeObjectMetadata_Get.json                                                                                                                                                                                                                                                                          |
| [integrationRuntimeObjectMetadataRefreshSample.ts][integrationruntimeobjectmetadatarefreshsample]                                         | Refresh a SSIS integration runtime object metadata. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeObjectMetadata_Refresh.json                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesCreateLinkedIntegrationRuntimeSample.ts][integrationruntimescreatelinkedintegrationruntimesample]                     | Create a linked integration runtime entry in a shared integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_CreateLinkedIntegrationRuntime.json                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesCreateOrUpdateSample.ts][integrationruntimescreateorupdatesample]                                                     | Creates or updates an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [integrationRuntimesDeleteSample.ts][integrationruntimesdeletesample]                                                                     | Deletes an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesGetConnectionInfoSample.ts][integrationruntimesgetconnectioninfosample]                                               | Gets the on-premises integration runtime connection information for encrypting the on-premises data source credentials. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_GetConnectionInfo.json                                                                                                                                                                                                                                                         |
| [integrationRuntimesGetMonitoringDataSample.ts][integrationruntimesgetmonitoringdatasample]                                               | Get the integration runtime monitoring data, which includes the monitor data for all the nodes under this integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_GetMonitoringData.json                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetSample.ts][integrationruntimesgetsample]                                                                           | Gets an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Get.json                                                                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetStatusSample.ts][integrationruntimesgetstatussample]                                                               | Gets detailed status information for an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_GetStatus.json                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesListAuthKeysSample.ts][integrationruntimeslistauthkeyssample]                                                         | Retrieves the authentication keys for an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_ListAuthKeys.json                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimesListByFactorySample.ts][integrationruntimeslistbyfactorysample]                                                       | Lists integration runtimes. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.ts][integrationruntimeslistoutboundnetworkdependenciesendpointssample] | Gets the list of outbound network dependencies for a given Azure-SSIS integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_ListOutboundNetworkDependenciesEndpoints.json                                                                                                                                                                                                                                                               |
| [integrationRuntimesRegenerateAuthKeySample.ts][integrationruntimesregenerateauthkeysample]                                               | Regenerates the authentication key for an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_RegenerateAuthKey.json                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesRemoveLinksSample.ts][integrationruntimesremovelinkssample]                                                           | Remove all linked integration runtimes under specific data factory in a self-hosted integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_RemoveLinks.json                                                                                                                                                                                                                                                                              |
| [integrationRuntimesStartSample.ts][integrationruntimesstartsample]                                                                       | Starts a ManagedReserved type integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesStopSample.ts][integrationruntimesstopsample]                                                                         | Stops a ManagedReserved type integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Stop.json                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesSyncCredentialsSample.ts][integrationruntimessynccredentialssample]                                                   | Force the integration runtime to synchronize credentials across integration runtime nodes, and this will override the credentials across all worker nodes with those available on the dispatcher node. If you already have the latest credential backup file, you should manually import it (preferred) on any self-hosted integration runtime node than using this API directly. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_SyncCredentials.json |
| [integrationRuntimesUpdateSample.ts][integrationruntimesupdatesample]                                                                     | Updates an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Update.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesUpgradeSample.ts][integrationruntimesupgradesample]                                                                   | Upgrade self-hosted integration runtime to latest version if availability. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Upgrade.json                                                                                                                                                                                                                                                                                                                |
| [linkedServicesCreateOrUpdateSample.ts][linkedservicescreateorupdatesample]                                                               | Creates or updates a linked service. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_Create.json                                                                                                                                                                                                                                                                                                                                                            |
| [linkedServicesDeleteSample.ts][linkedservicesdeletesample]                                                                               | Deletes a linked service. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_Delete.json                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedServicesGetSample.ts][linkedservicesgetsample]                                                                                     | Gets a linked service. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_Get.json                                                                                                                                                                                                                                                                                                                                                                             |
| [linkedServicesListByFactorySample.ts][linkedserviceslistbyfactorysample]                                                                 | Lists linked services. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                   |
| [managedPrivateEndpointsCreateOrUpdateSample.ts][managedprivateendpointscreateorupdatesample]                                             | Creates or updates a managed private endpoint. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_Create.json                                                                                                                                                                                                                                                                                                                                         |
| [managedPrivateEndpointsDeleteSample.ts][managedprivateendpointsdeletesample]                                                             | Deletes a managed private endpoint. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [managedPrivateEndpointsGetSample.ts][managedprivateendpointsgetsample]                                                                   | Gets a managed private endpoint. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [managedPrivateEndpointsListByFactorySample.ts][managedprivateendpointslistbyfactorysample]                                               | Lists managed private endpoints. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                |
| [managedVirtualNetworksCreateOrUpdateSample.ts][managedvirtualnetworkscreateorupdatesample]                                               | Creates or updates a managed Virtual Network. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedVirtualNetworks_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [managedVirtualNetworksGetSample.ts][managedvirtualnetworksgetsample]                                                                     | Gets a managed Virtual Network. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedVirtualNetworks_Get.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedVirtualNetworksListByFactorySample.ts][managedvirtualnetworkslistbyfactorysample]                                                 | Lists managed Virtual Networks. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedVirtualNetworks_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                  |
| [operationsListSample.ts][operationslistsample]                                                                                           | Lists the available Azure Data Factory API operations. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                                                                |
| [pipelineRunsCancelSample.ts][pipelinerunscancelsample]                                                                                   | Cancel a pipeline run by its run ID. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PipelineRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                              |
| [pipelineRunsGetSample.ts][pipelinerunsgetsample]                                                                                         | Get a pipeline run by its run ID. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PipelineRuns_Get.json                                                                                                                                                                                                                                                                                                                                                                    |
| [pipelineRunsQueryByFactorySample.ts][pipelinerunsquerybyfactorysample]                                                                   | Query pipeline runs in the factory based on input filter conditions. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PipelineRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                      |
| [pipelinesCreateOrUpdateSample.ts][pipelinescreateorupdatesample]                                                                         | Creates or updates a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_Create.json                                                                                                                                                                                                                                                                                                                                                                       |
| [pipelinesCreateRunSample.ts][pipelinescreaterunsample]                                                                                   | Creates a run of a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_CreateRun.json                                                                                                                                                                                                                                                                                                                                                                      |
| [pipelinesDeleteSample.ts][pipelinesdeletesample]                                                                                         | Deletes a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_Delete.json                                                                                                                                                                                                                                                                                                                                                                                  |
| [pipelinesGetSample.ts][pipelinesgetsample]                                                                                               | Gets a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_Get.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [pipelinesListByFactorySample.ts][pipelineslistbyfactorysample]                                                                           | Lists pipelines. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                              |
| [privateEndPointConnectionsListByFactorySample.ts][privateendpointconnectionslistbyfactorysample]                                         | Lists Private endpoint connections x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PrivateEndPointConnections_ListByFactory.json                                                                                                                                                                                                                                                                                                                                           |
| [privateEndpointConnectionCreateOrUpdateSample.ts][privateendpointconnectioncreateorupdatesample]                                         | Approves or rejects a private endpoint connection x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ApproveRejectPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionDeleteSample.ts][privateendpointconnectiondeletesample]                                                         | Deletes a private endpoint connection x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                 |
| [privateEndpointConnectionGetSample.ts][privateendpointconnectiongetsample]                                                               | Gets a private endpoint connection x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                       |
| [privateLinkResourcesGetSample.ts][privatelinkresourcesgetsample]                                                                         | Gets the private link resources x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GetPrivateLinkResources.json                                                                                                                                                                                                                                                                                                                                                               |
| [triggerRunsCancelSample.ts][triggerrunscancelsample]                                                                                     | Cancel a single trigger instance by runId. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/TriggerRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggerRunsQueryByFactorySample.ts][triggerrunsquerybyfactorysample]                                                                     | Query trigger runs. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/TriggerRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                        |
| [triggerRunsRerunSample.ts][triggerrunsrerunsample]                                                                                       | Rerun single trigger instance by runId. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/TriggerRuns_Rerun.json                                                                                                                                                                                                                                                                                                                                                             |
| [triggersCreateOrUpdateSample.ts][triggerscreateorupdatesample]                                                                           | Creates or updates a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [triggersDeleteSample.ts][triggersdeletesample]                                                                                           | Deletes a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [triggersGetEventSubscriptionStatusSample.ts][triggersgeteventsubscriptionstatussample]                                                   | Get a trigger's event subscription status. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_GetEventSubscriptionStatus.json                                                                                                                                                                                                                                                                                                                                        |
| [triggersGetSample.ts][triggersgetsample]                                                                                                 | Gets a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [triggersListByFactorySample.ts][triggerslistbyfactorysample]                                                                             | Lists triggers. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [triggersQueryByFactorySample.ts][triggersquerybyfactorysample]                                                                           | Query triggers. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                               |
| [triggersStartSample.ts][triggersstartsample]                                                                                             | Starts a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Start.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [triggersStopSample.ts][triggersstopsample]                                                                                               | Stops a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Stop.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [triggersSubscribeToEventsSample.ts][triggerssubscribetoeventssample]                                                                     | Subscribe event trigger to events. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_SubscribeToEvents.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggersUnsubscribeFromEventsSample.ts][triggersunsubscribefromeventssample]                                                             | Unsubscribe event trigger from events. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_UnsubscribeFromEvents.json                                                                                                                                                                                                                                                                                                                                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/activityRunsQueryByPipelineRunSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env DATAFACTORY_SUBSCRIPTION_ID="<datafactory subscription id>" DATAFACTORY_RESOURCE_GROUP="<datafactory resource group>" node dist/activityRunsQueryByPipelineRunSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[activityrunsquerybypipelinerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/activityRunsQueryByPipelineRunSample.ts
[dataflowdebugsessionadddataflowsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowDebugSessionAddDataFlowSample.ts
[dataflowdebugsessioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowDebugSessionCreateSample.ts
[dataflowdebugsessiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowDebugSessionDeleteSample.ts
[dataflowdebugsessionexecutecommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowDebugSessionExecuteCommandSample.ts
[dataflowdebugsessionquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowDebugSessionQueryByFactorySample.ts
[dataflowscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowsCreateOrUpdateSample.ts
[dataflowsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowsDeleteSample.ts
[dataflowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowsGetSample.ts
[dataflowslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/dataFlowsListByFactorySample.ts
[datasetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/datasetsCreateOrUpdateSample.ts
[datasetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/datasetsDeleteSample.ts
[datasetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/datasetsGetSample.ts
[datasetslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/datasetsListByFactorySample.ts
[exposurecontrolgetfeaturevaluebyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/exposureControlGetFeatureValueByFactorySample.ts
[exposurecontrolgetfeaturevaluesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/exposureControlGetFeatureValueSample.ts
[exposurecontrolqueryfeaturevaluesbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/exposureControlQueryFeatureValuesByFactorySample.ts
[factoriesconfigurefactoryreposample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesConfigureFactoryRepoSample.ts
[factoriescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesCreateOrUpdateSample.ts
[factoriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesDeleteSample.ts
[factoriesgetdataplaneaccesssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesGetDataPlaneAccessSample.ts
[factoriesgetgithubaccesstokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesGetGitHubAccessTokenSample.ts
[factoriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesGetSample.ts
[factorieslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesListByResourceGroupSample.ts
[factorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesListSample.ts
[factoriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/factoriesUpdateSample.ts
[globalparameterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/globalParametersCreateOrUpdateSample.ts
[globalparametersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/globalParametersDeleteSample.ts
[globalparametersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/globalParametersGetSample.ts
[globalparameterslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/globalParametersListByFactorySample.ts
[integrationruntimenodesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimeNodesDeleteSample.ts
[integrationruntimenodesgetipaddresssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimeNodesGetIPAddressSample.ts
[integrationruntimenodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimeNodesGetSample.ts
[integrationruntimenodesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimeNodesUpdateSample.ts
[integrationruntimeobjectmetadatagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimeObjectMetadataGetSample.ts
[integrationruntimeobjectmetadatarefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimeObjectMetadataRefreshSample.ts
[integrationruntimescreatelinkedintegrationruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesCreateLinkedIntegrationRuntimeSample.ts
[integrationruntimescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesCreateOrUpdateSample.ts
[integrationruntimesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesDeleteSample.ts
[integrationruntimesgetconnectioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesGetConnectionInfoSample.ts
[integrationruntimesgetmonitoringdatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesGetMonitoringDataSample.ts
[integrationruntimesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesGetSample.ts
[integrationruntimesgetstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesGetStatusSample.ts
[integrationruntimeslistauthkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesListAuthKeysSample.ts
[integrationruntimeslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesListByFactorySample.ts
[integrationruntimeslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.ts
[integrationruntimesregenerateauthkeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesRegenerateAuthKeySample.ts
[integrationruntimesremovelinkssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesRemoveLinksSample.ts
[integrationruntimesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesStartSample.ts
[integrationruntimesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesStopSample.ts
[integrationruntimessynccredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesSyncCredentialsSample.ts
[integrationruntimesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesUpdateSample.ts
[integrationruntimesupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/integrationRuntimesUpgradeSample.ts
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/linkedServicesCreateOrUpdateSample.ts
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/linkedServicesDeleteSample.ts
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/linkedServicesGetSample.ts
[linkedserviceslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/linkedServicesListByFactorySample.ts
[managedprivateendpointscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/managedPrivateEndpointsCreateOrUpdateSample.ts
[managedprivateendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/managedPrivateEndpointsDeleteSample.ts
[managedprivateendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/managedPrivateEndpointsGetSample.ts
[managedprivateendpointslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/managedPrivateEndpointsListByFactorySample.ts
[managedvirtualnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/managedVirtualNetworksCreateOrUpdateSample.ts
[managedvirtualnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/managedVirtualNetworksGetSample.ts
[managedvirtualnetworkslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/managedVirtualNetworksListByFactorySample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/operationsListSample.ts
[pipelinerunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelineRunsCancelSample.ts
[pipelinerunsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelineRunsGetSample.ts
[pipelinerunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelineRunsQueryByFactorySample.ts
[pipelinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelinesCreateOrUpdateSample.ts
[pipelinescreaterunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelinesCreateRunSample.ts
[pipelinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelinesDeleteSample.ts
[pipelinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelinesGetSample.ts
[pipelineslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/pipelinesListByFactorySample.ts
[privateendpointconnectionslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/privateEndPointConnectionsListByFactorySample.ts
[privateendpointconnectioncreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/privateEndpointConnectionCreateOrUpdateSample.ts
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/privateEndpointConnectionDeleteSample.ts
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/privateEndpointConnectionGetSample.ts
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/privateLinkResourcesGetSample.ts
[triggerrunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggerRunsCancelSample.ts
[triggerrunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggerRunsQueryByFactorySample.ts
[triggerrunsrerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggerRunsRerunSample.ts
[triggerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersCreateOrUpdateSample.ts
[triggersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersDeleteSample.ts
[triggersgeteventsubscriptionstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersGetEventSubscriptionStatusSample.ts
[triggersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersGetSample.ts
[triggerslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersListByFactorySample.ts
[triggersquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersQueryByFactorySample.ts
[triggersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersStartSample.ts
[triggersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersStopSample.ts
[triggerssubscribetoeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersSubscribeToEventsSample.ts
[triggersunsubscribefromeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/typescript/src/triggersUnsubscribeFromEventsSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-datafactory?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/datafactory/arm-datafactory/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
