sdk/datafactory/arm-datafactory/samples/v20/typescript/README.md
# @azure/arm-datafactory client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-datafactory in some common scenarios.

| **File Name**                                                                                                                             | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| ----------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [activityRunsQueryByPipelineRunSample.ts][activityrunsquerybypipelinerunsample]                                                           | query activity runs based on input filter conditions. x-ms-original-file: 2018-06-01/ActivityRuns_QueryByPipelineRun.json                                                                                                                                                                                                                                                                                                                                 |
| [changeDataCaptureCreateOrUpdateSample.ts][changedatacapturecreateorupdatesample]                                                         | creates or updates a change data capture resource. x-ms-original-file: 2018-06-01/ChangeDataCapture_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [changeDataCaptureDeleteSample.ts][changedatacapturedeletesample]                                                                         | deletes a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Delete.json                                                                                                                                                                                                                                                                                                                                                               |
| [changeDataCaptureGetSample.ts][changedatacapturegetsample]                                                                               | gets a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Get.json                                                                                                                                                                                                                                                                                                                                                                     |
| [changeDataCaptureListByFactorySample.ts][changedatacapturelistbyfactorysample]                                                           | lists all resources of type change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_ListByFactory.json                                                                                                                                                                                                                                                                                                                                      |
| [changeDataCaptureStartSample.ts][changedatacapturestartsample]                                                                           | starts a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Start.json                                                                                                                                                                                                                                                                                                                                                                 |
| [changeDataCaptureStatusSample.ts][changedatacapturestatussample]                                                                         | gets the current status for the change data capture resource. x-ms-original-file: 2018-06-01/ChangeDataCapture_Status.json                                                                                                                                                                                                                                                                                                                                |
| [changeDataCaptureStopSample.ts][changedatacapturestopsample]                                                                             | stops a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Stop.json                                                                                                                                                                                                                                                                                                                                                                   |
| [credentialOperationsCreateOrUpdateSample.ts][credentialoperationscreateorupdatesample]                                                   | creates or updates a credential. x-ms-original-file: 2018-06-01/Credentials_Create.json                                                                                                                                                                                                                                                                                                                                                                   |
| [credentialOperationsDeleteSample.ts][credentialoperationsdeletesample]                                                                   | deletes a credential. x-ms-original-file: 2018-06-01/Credentials_Delete.json                                                                                                                                                                                                                                                                                                                                                                              |
| [credentialOperationsGetSample.ts][credentialoperationsgetsample]                                                                         | gets a credential. x-ms-original-file: 2018-06-01/Credentials_Get.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [credentialOperationsListByFactorySample.ts][credentialoperationslistbyfactorysample]                                                     | list credentials. x-ms-original-file: 2018-06-01/Credentials_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                           |
| [dataFlowDebugSessionAddDataFlowSample.ts][dataflowdebugsessionadddataflowsample]                                                         | add a data flow into debug session. x-ms-original-file: 2018-06-01/DataFlowDebugSession_AddDataFlow.json                                                                                                                                                                                                                                                                                                                                                  |
| [dataFlowDebugSessionCreateSample.ts][dataflowdebugsessioncreatesample]                                                                   | creates a data flow debug session. x-ms-original-file: 2018-06-01/DataFlowDebugSession_Create.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionDeleteSample.ts][dataflowdebugsessiondeletesample]                                                                   | deletes a data flow debug session. x-ms-original-file: 2018-06-01/DataFlowDebugSession_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionExecuteCommandSample.ts][dataflowdebugsessionexecutecommandsample]                                                   | execute a data flow debug command. x-ms-original-file: 2018-06-01/DataFlowDebugSession_ExecuteCommand.json                                                                                                                                                                                                                                                                                                                                                |
| [dataFlowDebugSessionQueryByFactorySample.ts][dataflowdebugsessionquerybyfactorysample]                                                   | query all active data flow debug sessions. x-ms-original-file: 2018-06-01/DataFlowDebugSession_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowsCreateOrUpdateSample.ts][dataflowscreateorupdatesample]                                                                         | creates or updates a data flow. x-ms-original-file: 2018-06-01/DataFlows_Create.json                                                                                                                                                                                                                                                                                                                                                                      |
| [dataFlowsDeleteSample.ts][dataflowsdeletesample]                                                                                         | deletes a data flow. x-ms-original-file: 2018-06-01/DataFlows_Delete.json                                                                                                                                                                                                                                                                                                                                                                                 |
| [dataFlowsGetSample.ts][dataflowsgetsample]                                                                                               | gets a data flow. x-ms-original-file: 2018-06-01/DataFlows_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [dataFlowsListByFactorySample.ts][dataflowslistbyfactorysample]                                                                           | lists data flows. x-ms-original-file: 2018-06-01/DataFlows_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                             |
| [datasetsCreateOrUpdateSample.ts][datasetscreateorupdatesample]                                                                           | creates or updates a dataset. x-ms-original-file: 2018-06-01/Datasets_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [datasetsDeleteSample.ts][datasetsdeletesample]                                                                                           | deletes a dataset. x-ms-original-file: 2018-06-01/Datasets_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [datasetsGetSample.ts][datasetsgetsample]                                                                                                 | gets a dataset. x-ms-original-file: 2018-06-01/Datasets_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [datasetsListByFactorySample.ts][datasetslistbyfactorysample]                                                                             | lists datasets. x-ms-original-file: 2018-06-01/Datasets_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [exposureControlGetFeatureValueByFactorySample.ts][exposurecontrolgetfeaturevaluebyfactorysample]                                         | get exposure control feature for specific factory. x-ms-original-file: 2018-06-01/ExposureControl_GetFeatureValueByFactory.json                                                                                                                                                                                                                                                                                                                           |
| [exposureControlGetFeatureValueSample.ts][exposurecontrolgetfeaturevaluesample]                                                           | get exposure control feature for specific location. x-ms-original-file: 2018-06-01/ExposureControl_GetFeatureValue.json                                                                                                                                                                                                                                                                                                                                   |
| [exposureControlQueryFeatureValuesByFactorySample.ts][exposurecontrolqueryfeaturevaluesbyfactorysample]                                   | get list of exposure control features for specific factory. x-ms-original-file: 2018-06-01/ExposureControl_QueryFeatureValuesByFactory.json                                                                                                                                                                                                                                                                                                               |
| [factoriesConfigureFactoryRepoSample.ts][factoriesconfigurefactoryreposample]                                                             | updates a factory's repo information. x-ms-original-file: 2018-06-01/Factories_ConfigureFactoryRepo.json                                                                                                                                                                                                                                                                                                                                                  |
| [factoriesCreateOrUpdateSample.ts][factoriescreateorupdatesample]                                                                         | creates or updates a factory. x-ms-original-file: 2018-06-01/Factories_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                |
| [factoriesDeleteSample.ts][factoriesdeletesample]                                                                                         | deletes a factory. x-ms-original-file: 2018-06-01/Factories_Delete.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetDataPlaneAccessSample.ts][factoriesgetdataplaneaccesssample]                                                                 | get Data Plane access. x-ms-original-file: 2018-06-01/Factories_GetDataPlaneAccess.json                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetGitHubAccessTokenSample.ts][factoriesgetgithubaccesstokensample]                                                             | get GitHub Access Token. x-ms-original-file: 2018-06-01/Factories_GetGitHubAccessToken.json                                                                                                                                                                                                                                                                                                                                                               |
| [factoriesGetSample.ts][factoriesgetsample]                                                                                               | gets a factory. x-ms-original-file: 2018-06-01/Factories_Get.json                                                                                                                                                                                                                                                                                                                                                                                         |
| [factoriesListByResourceGroupSample.ts][factorieslistbyresourcegroupsample]                                                               | lists factories. x-ms-original-file: 2018-06-01/Factories_ListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                        |
| [factoriesListSample.ts][factorieslistsample]                                                                                             | lists factories under the specified subscription. x-ms-original-file: 2018-06-01/Factories_List.json                                                                                                                                                                                                                                                                                                                                                      |
| [factoriesUpdateSample.ts][factoriesupdatesample]                                                                                         | updates a factory. x-ms-original-file: 2018-06-01/Factories_Update.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [globalParametersCreateOrUpdateSample.ts][globalparameterscreateorupdatesample]                                                           | creates or updates a Global parameter x-ms-original-file: 2018-06-01/GlobalParameters_Create.json                                                                                                                                                                                                                                                                                                                                                         |
| [globalParametersDeleteSample.ts][globalparametersdeletesample]                                                                           | deletes a Global parameter x-ms-original-file: 2018-06-01/GlobalParameters_Delete.json                                                                                                                                                                                                                                                                                                                                                                    |
| [globalParametersGetSample.ts][globalparametersgetsample]                                                                                 | gets a Global parameter x-ms-original-file: 2018-06-01/GlobalParameters_Get.json                                                                                                                                                                                                                                                                                                                                                                          |
| [globalParametersListByFactorySample.ts][globalparameterslistbyfactorysample]                                                             | lists Global parameters x-ms-original-file: 2018-06-01/GlobalParameters_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                |
| [integrationRuntimeDisableInteractiveQuerySample.ts][integrationruntimedisableinteractivequerysample]                                     | disable interactive authoring of Managed Virtual Network integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_DisableInteractiveQuery.json                                                                                                                                                                                                                                                                                             |
| [integrationRuntimeEnableInteractiveQuerySample.ts][integrationruntimeenableinteractivequerysample]                                       | enable interactive authoring of Managed Virtual Network integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_EnableInteractiveQuery.json                                                                                                                                                                                                                                                                                               |
| [integrationRuntimeNodesDeleteSample.ts][integrationruntimenodesdeletesample]                                                             | deletes a self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_Delete.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeNodesGetIpAddressSample.ts][integrationruntimenodesgetipaddresssample]                                                 | get the IP address of self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_GetIpAddress.json                                                                                                                                                                                                                                                                                                                      |
| [integrationRuntimeNodesGetSample.ts][integrationruntimenodesgetsample]                                                                   | gets a self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [integrationRuntimeNodesUpdateSample.ts][integrationruntimenodesupdatesample]                                                             | updates a self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_Update.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeObjectMetadataGetSample.ts][integrationruntimeobjectmetadatagetsample]                                                 | get a SSIS integration runtime object metadata by specified path. The return is pageable metadata list. x-ms-original-file: 2018-06-01/IntegrationRuntimeObjectMetadata_Get.json                                                                                                                                                                                                                                                                          |
| [integrationRuntimeObjectMetadataRefreshSample.ts][integrationruntimeobjectmetadatarefreshsample]                                         | refresh a SSIS integration runtime object metadata. x-ms-original-file: 2018-06-01/IntegrationRuntimeObjectMetadata_Refresh.json                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesCreateLinkedIntegrationRuntimeSample.ts][integrationruntimescreatelinkedintegrationruntimesample]                     | create a linked integration runtime entry in a shared integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_CreateLinkedIntegrationRuntime.json                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesCreateOrUpdateSample.ts][integrationruntimescreateorupdatesample]                                                     | creates or updates an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [integrationRuntimesDeleteSample.ts][integrationruntimesdeletesample]                                                                     | deletes an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesGetConnectionInfoSample.ts][integrationruntimesgetconnectioninfosample]                                               | gets the on-premises integration runtime connection information for encrypting the on-premises data source credentials. x-ms-original-file: 2018-06-01/IntegrationRuntimes_GetConnectionInfo.json                                                                                                                                                                                                                                                         |
| [integrationRuntimesGetMonitoringDataSample.ts][integrationruntimesgetmonitoringdatasample]                                               | get the integration runtime monitoring data, which includes the monitor data for all the nodes under this integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_GetMonitoringData.json                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetSample.ts][integrationruntimesgetsample]                                                                           | gets an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Get.json                                                                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetStatusSample.ts][integrationruntimesgetstatussample]                                                               | gets detailed status information for an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_GetStatus.json                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesListAuthKeysSample.ts][integrationruntimeslistauthkeyssample]                                                         | retrieves the authentication keys for an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_ListAuthKeys.json                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimesListByFactorySample.ts][integrationruntimeslistbyfactorysample]                                                       | lists integration runtimes. x-ms-original-file: 2018-06-01/IntegrationRuntimes_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.ts][integrationruntimeslistoutboundnetworkdependenciesendpointssample] | gets the list of outbound network dependencies for a given Azure-SSIS integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_ListOutboundNetworkDependenciesEndpoints.json                                                                                                                                                                                                                                                               |
| [integrationRuntimesRegenerateAuthKeySample.ts][integrationruntimesregenerateauthkeysample]                                               | regenerates the authentication key for an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_RegenerateAuthKey.json                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesRemoveLinksSample.ts][integrationruntimesremovelinkssample]                                                           | remove all linked integration runtimes under specific data factory in a self-hosted integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_RemoveLinks.json                                                                                                                                                                                                                                                                              |
| [integrationRuntimesStartSample.ts][integrationruntimesstartsample]                                                                       | starts a ManagedReserved type integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesStopSample.ts][integrationruntimesstopsample]                                                                         | stops a ManagedReserved type integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Stop.json                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesSyncCredentialsSample.ts][integrationruntimessynccredentialssample]                                                   | force the integration runtime to synchronize credentials across integration runtime nodes, and this will override the credentials across all worker nodes with those available on the dispatcher node. If you already have the latest credential backup file, you should manually import it (preferred) on any self-hosted integration runtime node than using this API directly. x-ms-original-file: 2018-06-01/IntegrationRuntimes_SyncCredentials.json |
| [integrationRuntimesUpdateSample.ts][integrationruntimesupdatesample]                                                                     | updates an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Update.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesUpgradeSample.ts][integrationruntimesupgradesample]                                                                   | upgrade self-hosted integration runtime to latest version if availability. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Upgrade.json                                                                                                                                                                                                                                                                                                                |
| [linkedServicesCreateOrUpdateSample.ts][linkedservicescreateorupdatesample]                                                               | creates or updates a linked service. x-ms-original-file: 2018-06-01/LinkedServices_Create.json                                                                                                                                                                                                                                                                                                                                                            |
| [linkedServicesDeleteSample.ts][linkedservicesdeletesample]                                                                               | deletes a linked service. x-ms-original-file: 2018-06-01/LinkedServices_Delete.json                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedServicesGetSample.ts][linkedservicesgetsample]                                                                                     | gets a linked service. x-ms-original-file: 2018-06-01/LinkedServices_Get.json                                                                                                                                                                                                                                                                                                                                                                             |
| [linkedServicesListByFactorySample.ts][linkedserviceslistbyfactorysample]                                                                 | lists linked services. x-ms-original-file: 2018-06-01/LinkedServices_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                   |
| [managedPrivateEndpointsCreateOrUpdateSample.ts][managedprivateendpointscreateorupdatesample]                                             | creates or updates a managed private endpoint. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_Create.json                                                                                                                                                                                                                                                                                                                                         |
| [managedPrivateEndpointsDeleteSample.ts][managedprivateendpointsdeletesample]                                                             | deletes a managed private endpoint. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [managedPrivateEndpointsGetSample.ts][managedprivateendpointsgetsample]                                                                   | gets a managed private endpoint. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [managedPrivateEndpointsListByFactorySample.ts][managedprivateendpointslistbyfactorysample]                                               | lists managed private endpoints. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                |
| [managedVirtualNetworksCreateOrUpdateSample.ts][managedvirtualnetworkscreateorupdatesample]                                               | creates or updates a managed Virtual Network. x-ms-original-file: 2018-06-01/ManagedVirtualNetworks_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [managedVirtualNetworksGetSample.ts][managedvirtualnetworksgetsample]                                                                     | gets a managed Virtual Network. x-ms-original-file: 2018-06-01/ManagedVirtualNetworks_Get.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedVirtualNetworksListByFactorySample.ts][managedvirtualnetworkslistbyfactorysample]                                                 | lists managed Virtual Networks. x-ms-original-file: 2018-06-01/ManagedVirtualNetworks_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                  |
| [operationsListSample.ts][operationslistsample]                                                                                           | lists the available Azure Data Factory API operations. x-ms-original-file: 2018-06-01/Operations_List.json                                                                                                                                                                                                                                                                                                                                                |
| [pipelineRunsCancelSample.ts][pipelinerunscancelsample]                                                                                   | cancel a pipeline run by its run ID. x-ms-original-file: 2018-06-01/PipelineRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                              |
| [pipelineRunsGetSample.ts][pipelinerunsgetsample]                                                                                         | get a pipeline run by its run ID. x-ms-original-file: 2018-06-01/PipelineRuns_Get.json                                                                                                                                                                                                                                                                                                                                                                    |
| [pipelineRunsQueryByFactorySample.ts][pipelinerunsquerybyfactorysample]                                                                   | query pipeline runs in the factory based on input filter conditions. x-ms-original-file: 2018-06-01/PipelineRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                      |
| [pipelinesCreateOrUpdateSample.ts][pipelinescreateorupdatesample]                                                                         | creates or updates a pipeline. x-ms-original-file: 2018-06-01/Pipelines_Create.json                                                                                                                                                                                                                                                                                                                                                                       |
| [pipelinesCreateRunSample.ts][pipelinescreaterunsample]                                                                                   | creates a run of a pipeline. x-ms-original-file: 2018-06-01/Pipelines_CreateRun.json                                                                                                                                                                                                                                                                                                                                                                      |
| [pipelinesDeleteSample.ts][pipelinesdeletesample]                                                                                         | deletes a pipeline. x-ms-original-file: 2018-06-01/Pipelines_Delete.json                                                                                                                                                                                                                                                                                                                                                                                  |
| [pipelinesGetSample.ts][pipelinesgetsample]                                                                                               | gets a pipeline. x-ms-original-file: 2018-06-01/Pipelines_Get.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [pipelinesListByFactorySample.ts][pipelineslistbyfactorysample]                                                                           | lists pipelines. x-ms-original-file: 2018-06-01/Pipelines_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                              |
| [privateEndPointConnectionsListByFactorySample.ts][privateendpointconnectionslistbyfactorysample]                                         | lists Private endpoint connections x-ms-original-file: 2018-06-01/PrivateEndPointConnections_ListByFactory.json                                                                                                                                                                                                                                                                                                                                           |
| [privateEndpointConnectionCreateOrUpdateSample.ts][privateendpointconnectioncreateorupdatesample]                                         | approves or rejects a private endpoint connection x-ms-original-file: 2018-06-01/ApproveRejectPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionDeleteSample.ts][privateendpointconnectiondeletesample]                                                         | deletes a private endpoint connection x-ms-original-file: 2018-06-01/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                 |
| [privateEndpointConnectionGetSample.ts][privateendpointconnectiongetsample]                                                               | gets a private endpoint connection x-ms-original-file: 2018-06-01/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                       |
| [privateLinkResourcesGetSample.ts][privatelinkresourcesgetsample]                                                                         | gets the private link resources x-ms-original-file: 2018-06-01/GetPrivateLinkResources.json                                                                                                                                                                                                                                                                                                                                                               |
| [triggerRunsCancelSample.ts][triggerrunscancelsample]                                                                                     | cancel a single trigger instance by runId. x-ms-original-file: 2018-06-01/TriggerRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggerRunsQueryByFactorySample.ts][triggerrunsquerybyfactorysample]                                                                     | query trigger runs. x-ms-original-file: 2018-06-01/TriggerRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                        |
| [triggerRunsRerunSample.ts][triggerrunsrerunsample]                                                                                       | rerun single trigger instance by runId. x-ms-original-file: 2018-06-01/TriggerRuns_Rerun.json                                                                                                                                                                                                                                                                                                                                                             |
| [triggersCreateOrUpdateSample.ts][triggerscreateorupdatesample]                                                                           | creates or updates a trigger. x-ms-original-file: 2018-06-01/Triggers_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [triggersDeleteSample.ts][triggersdeletesample]                                                                                           | deletes a trigger. x-ms-original-file: 2018-06-01/Triggers_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [triggersGetEventSubscriptionStatusSample.ts][triggersgeteventsubscriptionstatussample]                                                   | get a trigger's event subscription status. x-ms-original-file: 2018-06-01/Triggers_GetEventSubscriptionStatus.json                                                                                                                                                                                                                                                                                                                                        |
| [triggersGetSample.ts][triggersgetsample]                                                                                                 | gets a trigger. x-ms-original-file: 2018-06-01/Triggers_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [triggersListByFactorySample.ts][triggerslistbyfactorysample]                                                                             | lists triggers. x-ms-original-file: 2018-06-01/Triggers_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [triggersQueryByFactorySample.ts][triggersquerybyfactorysample]                                                                           | query triggers. x-ms-original-file: 2018-06-01/Triggers_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                               |
| [triggersStartSample.ts][triggersstartsample]                                                                                             | starts a trigger. x-ms-original-file: 2018-06-01/Triggers_Start.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [triggersStopSample.ts][triggersstopsample]                                                                                               | stops a trigger. x-ms-original-file: 2018-06-01/Triggers_Stop.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [triggersSubscribeToEventsSample.ts][triggerssubscribetoeventssample]                                                                     | subscribe event trigger to events. x-ms-original-file: 2018-06-01/Triggers_SubscribeToEvents.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggersUnsubscribeFromEventsSample.ts][triggersunsubscribefromeventssample]                                                             | unsubscribe event trigger from events. x-ms-original-file: 2018-06-01/Triggers_UnsubscribeFromEvents.json                                                                                                                                                                                                                                                                                                                                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/activityRunsQueryByPipelineRunSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/activityRunsQueryByPipelineRunSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[activityrunsquerybypipelinerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/activityRunsQueryByPipelineRunSample.ts
[changedatacapturecreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/changeDataCaptureCreateOrUpdateSample.ts
[changedatacapturedeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/changeDataCaptureDeleteSample.ts
[changedatacapturegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/changeDataCaptureGetSample.ts
[changedatacapturelistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/changeDataCaptureListByFactorySample.ts
[changedatacapturestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/changeDataCaptureStartSample.ts
[changedatacapturestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/changeDataCaptureStatusSample.ts
[changedatacapturestopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/changeDataCaptureStopSample.ts
[credentialoperationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/credentialOperationsCreateOrUpdateSample.ts
[credentialoperationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/credentialOperationsDeleteSample.ts
[credentialoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/credentialOperationsGetSample.ts
[credentialoperationslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/credentialOperationsListByFactorySample.ts
[dataflowdebugsessionadddataflowsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowDebugSessionAddDataFlowSample.ts
[dataflowdebugsessioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowDebugSessionCreateSample.ts
[dataflowdebugsessiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowDebugSessionDeleteSample.ts
[dataflowdebugsessionexecutecommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowDebugSessionExecuteCommandSample.ts
[dataflowdebugsessionquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowDebugSessionQueryByFactorySample.ts
[dataflowscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowsCreateOrUpdateSample.ts
[dataflowsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowsDeleteSample.ts
[dataflowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowsGetSample.ts
[dataflowslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/dataFlowsListByFactorySample.ts
[datasetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/datasetsCreateOrUpdateSample.ts
[datasetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/datasetsDeleteSample.ts
[datasetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/datasetsGetSample.ts
[datasetslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/datasetsListByFactorySample.ts
[exposurecontrolgetfeaturevaluebyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/exposureControlGetFeatureValueByFactorySample.ts
[exposurecontrolgetfeaturevaluesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/exposureControlGetFeatureValueSample.ts
[exposurecontrolqueryfeaturevaluesbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/exposureControlQueryFeatureValuesByFactorySample.ts
[factoriesconfigurefactoryreposample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesConfigureFactoryRepoSample.ts
[factoriescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesCreateOrUpdateSample.ts
[factoriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesDeleteSample.ts
[factoriesgetdataplaneaccesssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesGetDataPlaneAccessSample.ts
[factoriesgetgithubaccesstokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesGetGitHubAccessTokenSample.ts
[factoriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesGetSample.ts
[factorieslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesListByResourceGroupSample.ts
[factorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesListSample.ts
[factoriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/factoriesUpdateSample.ts
[globalparameterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/globalParametersCreateOrUpdateSample.ts
[globalparametersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/globalParametersDeleteSample.ts
[globalparametersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/globalParametersGetSample.ts
[globalparameterslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/globalParametersListByFactorySample.ts
[integrationruntimedisableinteractivequerysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeDisableInteractiveQuerySample.ts
[integrationruntimeenableinteractivequerysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeEnableInteractiveQuerySample.ts
[integrationruntimenodesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeNodesDeleteSample.ts
[integrationruntimenodesgetipaddresssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeNodesGetIpAddressSample.ts
[integrationruntimenodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeNodesGetSample.ts
[integrationruntimenodesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeNodesUpdateSample.ts
[integrationruntimeobjectmetadatagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeObjectMetadataGetSample.ts
[integrationruntimeobjectmetadatarefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimeObjectMetadataRefreshSample.ts
[integrationruntimescreatelinkedintegrationruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesCreateLinkedIntegrationRuntimeSample.ts
[integrationruntimescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesCreateOrUpdateSample.ts
[integrationruntimesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesDeleteSample.ts
[integrationruntimesgetconnectioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesGetConnectionInfoSample.ts
[integrationruntimesgetmonitoringdatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesGetMonitoringDataSample.ts
[integrationruntimesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesGetSample.ts
[integrationruntimesgetstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesGetStatusSample.ts
[integrationruntimeslistauthkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesListAuthKeysSample.ts
[integrationruntimeslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesListByFactorySample.ts
[integrationruntimeslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.ts
[integrationruntimesregenerateauthkeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesRegenerateAuthKeySample.ts
[integrationruntimesremovelinkssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesRemoveLinksSample.ts
[integrationruntimesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesStartSample.ts
[integrationruntimesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesStopSample.ts
[integrationruntimessynccredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesSyncCredentialsSample.ts
[integrationruntimesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesUpdateSample.ts
[integrationruntimesupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/integrationRuntimesUpgradeSample.ts
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/linkedServicesCreateOrUpdateSample.ts
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/linkedServicesDeleteSample.ts
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/linkedServicesGetSample.ts
[linkedserviceslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/linkedServicesListByFactorySample.ts
[managedprivateendpointscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/managedPrivateEndpointsCreateOrUpdateSample.ts
[managedprivateendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/managedPrivateEndpointsDeleteSample.ts
[managedprivateendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/managedPrivateEndpointsGetSample.ts
[managedprivateendpointslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/managedPrivateEndpointsListByFactorySample.ts
[managedvirtualnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/managedVirtualNetworksCreateOrUpdateSample.ts
[managedvirtualnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/managedVirtualNetworksGetSample.ts
[managedvirtualnetworkslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/managedVirtualNetworksListByFactorySample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/operationsListSample.ts
[pipelinerunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelineRunsCancelSample.ts
[pipelinerunsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelineRunsGetSample.ts
[pipelinerunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelineRunsQueryByFactorySample.ts
[pipelinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelinesCreateOrUpdateSample.ts
[pipelinescreaterunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelinesCreateRunSample.ts
[pipelinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelinesDeleteSample.ts
[pipelinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelinesGetSample.ts
[pipelineslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/pipelinesListByFactorySample.ts
[privateendpointconnectionslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/privateEndPointConnectionsListByFactorySample.ts
[privateendpointconnectioncreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/privateEndpointConnectionCreateOrUpdateSample.ts
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/privateEndpointConnectionDeleteSample.ts
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/privateEndpointConnectionGetSample.ts
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/privateLinkResourcesGetSample.ts
[triggerrunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggerRunsCancelSample.ts
[triggerrunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggerRunsQueryByFactorySample.ts
[triggerrunsrerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggerRunsRerunSample.ts
[triggerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersCreateOrUpdateSample.ts
[triggersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersDeleteSample.ts
[triggersgeteventsubscriptionstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersGetEventSubscriptionStatusSample.ts
[triggersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersGetSample.ts
[triggerslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersListByFactorySample.ts
[triggersquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersQueryByFactorySample.ts
[triggersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersStartSample.ts
[triggersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersStopSample.ts
[triggerssubscribetoeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersSubscribeToEventsSample.ts
[triggersunsubscribefromeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/typescript/src/triggersUnsubscribeFromEventsSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-datafactory?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/datafactory/arm-datafactory/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
